Corrected note card spacing

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -20,3 +20,7 @@
 .text-blue {
     color: #0dcaf0;
 }
+
+.flex-gap {
+    gap: 1rem;
+}
